syntax = "proto3";
package kardiachain.types;

option go_package = "github.com/kardiachain/go-kardia/proto/kardiachain/types";

import "gogoproto/gogo.proto";
import "kardiachain/types/types.proto";

// DuplicateVoteEvidence contains evidence a validator signed two conflicting
// votes.
message DuplicateVoteEvidence {
  Vote vote_a = 1;
  Vote vote_b = 2;
}


message Evidence {
  oneof sum {
    DuplicateVoteEvidence     duplicate_vote_evidence      = 1;
  }
}

// EvidenceData contains any evidence of malicious wrong-doing by validators
message EvidenceData {
  repeated Evidence evidence = 1 [(gogoproto.nullable) = false];
}